Just to check whether commit is working fine.

--- a/www/templates/checkStatus.html
+++ b/www/templates/checkStatus.html
@@ -10,6 +10,7 @@
     	<ion-toggle ng-model="isOnline" ng-checked="item.checked">
     		<h1 ng-show="isOnline">I'm online</h1>
     		<h1 ng-show="! isOnline">I'm offline</h1>
+        <h1 ng-show="! isOnline">I don't know what I am doing in my life??</h1>
     	</ion-toggle>
   	</div>
   </div>
