Trying to commit the file in other branch.

--- a/www/templates/checkStatus.html
+++ b/www/templates/checkStatus.html
@@ -11,6 +11,8 @@
     		<h1 ng-show="isOnline">I'm online</h1>
     		<h1 ng-show="! isOnline">I'm offline</h1>
         <h1 ng-show="! isOnline">I don't know what I am doing in my life??</h1>
+        <h1 ng-show="! isOnline">I don't know what I am doing in my life??123</h1>
+        <h1 ng-show="! isOnline">I don't know what I am doing in my life??456</h1>
     	</ion-toggle>
   	</div>
   </div>
